tests/testcases/errors/BCE0038-1.boo
"""
BCE0038-1.boo(5,5): BCE0038: 'Foo' is not a valid macro.
"""
class Foo:
	Foo

